Ignore coveralls error

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test"             : "mocha -u tdd",
     "test-cov"         : "mocha -u tdd -r blanket -R html-cov > coverage.html",
     "test-cov-text"    : "mocha -u tdd -r blanket -R mocha-text-cov",
-    "test-coveralls"   : "mocha -u tdd -r blanket -R mocha-lcov-reporter | coveralls"
+    "test-coveralls"   : "mocha -u tdd -r blanket -R mocha-lcov-reporter | coveralls || true"
   },
   "devDependencies": {
     "blanket": "git://github.com/alex-seville/blanket.git",
